@startuml Game

' =========================
'  Skin
' =========================

skinparam shadowing false
skinparam roundcorner 5
skinparam dpi 150

skinparam DefaultFontName "Inter"
skinparam DefaultFontSize 12
skinparam classAttributeIconSize 0
skinparam Linetype ortho

skinparam class {
  BackgroundColor #F9F9F9
  BorderColor #BFBFBF
  FontColor #333333
}

skinparam Arrow {
  Color #9E9E9E
  Thickness 1
}

hide circle
hide empty members

' =========================
'  Classes
' =========================

' Subtitle for classes: 
' \n<size:10><i>(from model)</i></size>

interface Game << Interface >> {
    +updateEntities(long deltaTime, Vector2dc playerDirection) : void 
    +isGameEnded() : boolean 
    +choosenWeapon(String wc) : void 
    +weaponsToChooseFrom() : Set<WeaponChoice>
    +hasPlayerLevelledUp() : boolean 
    +getGameStatistics() : Map<String, Integer>
    +getAllMapObjects() : Collection<MapObject>
    +getPlayerInfos() : PlayerInfos 
}

class GameImpl {

}

record PlayerInfos << Record >> {
  +experience() : int
  +level() : int
  +neededExp() : int
  +coins() : int
  +currentHealth() : double
  +maxHealth() : double
}

record WeaponChoice << Record >> {
  +name() : String 
  +lvlUpDescriptio() : String 
}

interface GameMap << Interface >> {

}

interface Engine << Interface >> {

}

interface GameView << Interface >> {

}

GameImpl -up-|> Game

PlayerInfos --* Game
WeaponChoice --* Game

Game *-right- GameMap
Engine *-- Game

Engine .. PlayerInfos
Engine .up. WeaponChoice
Engine *-down- GameView

GameView .left. PlayerInfos
GameView .right. WeaponChoice


@enduml 